# tauri-plugin-openmls

./: Cargo.toml  build.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: add_member.toml  best_common_ciphersuite.toml  clear_all_data.toml  commit_pending_proposals.toml  create_group.toml  create_key_package.toml  decommission_client.toml  delete_group.toml  discard_message.toml  export_ratchet_tree.toml  extract_group_id.toml  get_group_fingerprints.toml  get_group_member_identities.toml  get_key_package_fingerprint.toml  get_own_fingerprint.toml  init_user.toml  join_group.toml  load_group.toml  prepare_attachment_bytes.toml  prepare_attachment_file.toml  remove_attachment.toml  remove_group_member.toml  remove_group_member_client.toml  remove_self_from_group.toml  save_attachment_as.toml  serve_attachment.toml
permissions/schemas/: schema.json
src/: lib.rs  tests.rs
