[package]
name = "tauri-plugin-openmls"
version = "0.1.0"
edition = "2021"
description = "Native OpenMLS backend for Tauri apps"
links = "tauri-plugin-openmls"

[dependencies]
openmls = "0.8" # { path = "../../../../openmls/openmls" }
openmls_rust_crypto = "0.5" # { 
# # path = "../../../../openmls/openmls_rust_crypto" 
# }
openmls_basic_credential = "0.5" #{ path = "../../../../openmls/basic_credential"  }
openmls_traits = "0.5" #{ path = "../../../../openmls/traits" }
openmls_sqlite_storage = "0.2" #{ path = "../../../../openmls/sqlite_storage" }

tauri = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
